# ComfyUI-The-Last-Model-Switcher

./: LICENSE  README.md  __init__.py  presets.json  pyproject.toml
web/js/: the_last_model_switcher.js
